# YA_VO

./: CMakeLists.txt  README.md  macInstalltion.txt
config/: KITTI.json  KITTI_mock_test.json
include/: 3DHandler.hpp  BriefDescriptor.hpp  FastDetector.hpp  Feature.hpp  FeatureExtractor.hpp  Frame.hpp  Frontend.hpp  Image.hpp  LoopHandler.hpp  Map.hpp  MapPoint.hpp  Optimizer.hpp  Utils.hpp  viz.hpp
shortnotes/: orb.md
src/: 3DHandler.cc  BriefDescriptor.cc  FastDetector.cc  Frame.cc  Image.cc  LoopHandler.cc  Map.cc  MapPoint.cc  Optimizer.cc  Utils.cc  main.cc  test.cc  viz.cc
tests/: 3DHandlerTest.cc  BriefDescriptorTest.cc  FastDetectorTest.cc  ImageTest.cc  LoopHandlerTest.cc  OptimizerTest.cc  UtilsTest.cc
